--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -12,7 +12,7 @@
         </div>
         <ion-nav-buttons side="right">
             <a href="#/app/suggestpost">
-                <button class="button button-icon button-clear ion-edit post-icon blue brf">
+                <button class="button button-icon button-clear ion-edit post-icon blue brf white">
                 </button>
             </a>
             <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
