--- a/templates/suggestedpost.html
+++ b/templates/suggestedpost.html
@@ -67,7 +67,7 @@
             <div class="suggested-img">
                 <img src="img/dellpost.png" alt="">
             </div>
-            <hr class="vertical-blue width-hr">
+            <hr class="vertical-bluess width-hr">
             <div class="btncreate">
                 <a href="#/app/suggestpost">
                     <button class="button button-small button-positive savebtn btn-create">
