--- a/css/style.css
+++ b/css/style.css
@@ -719,7 +719,7 @@ ion-view.bgprofile.pane {
 }
 
 .profile-cont {
-    background: rgba(255, 119, 1, 0.9);
+    background: rgba(255, 119, 1, 0.82);
     min-height: 200px;
     margin-top: 0px;
     padding: 16px 0 10px 0px;
@@ -1400,7 +1400,7 @@ hr.vertical-blue {
     border: 0;
     background: rgba(15, 136, 197, 0.6);
     position: absolute;
-    top: 236px;
+    top: 270px;
     z-index: 9999999999999;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
@@ -1408,6 +1408,13 @@ hr.vertical-blue {
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
     left: 50%;
+}
+
+hr.vertical-bluess {
+    width: 70%;
+    height: 1px;
+    border: 0;
+    background: rgba(15, 136, 197, 0.6);
 }
 
 .lead13 h5,
@@ -1469,7 +1476,7 @@ hr.vertical-blue {
 .score-lead {
     color: #0F88C5;
     padding-top: 28px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .box-slider.login .slider-pager .slider-pager-page {
@@ -1886,6 +1893,10 @@ button.button.button-small.imgset {
 .suggested-img {
     text-align: center;
     padding: 25px 0 5px 0;
+}
+
+.white {
+    color: #fff!important;
 }
 
 .btn-create {
@@ -2389,4 +2400,8 @@ ion-header-bar.static-header-main {
 
 .bar-footer {
     background: transparent;
+}
+
+ion-item.menumain.main-logout.item {
+    margin-top: 10px;
 }
