--- a/templates/menu.html
+++ b/templates/menu.html
@@ -65,7 +65,7 @@
                     <span class="ion-trophy tac" title="leaderboard" aria-hidden="true"></span>
                     <div class="head-text">Leader Board</div>
                 </ion-item>
-                <ion-item nav-clear menu-close class="menumain" ng-click="logoutapp()">
+                <ion-item nav-clear menu-close class="menumain main-logout" ng-click="logoutapp()">
                     <div class="logout">
                         <span class="ion-log-out tac" title="logout" aria-hidden="true"></span>
                         <div class="head-text">Logout</div>
