Back button Fixed

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,31 +21,31 @@
         </div>
         <div class="home-profile">
             <div class="home-leader">
-                <a href="#/app/leaderboard"> <i class="icon icon-trophy">&nbsp;</i>
+                <a nav-clear menu-close href="#/app/leaderboard"> <i class="icon icon-trophy">&nbsp;</i>
                     <div class="leader">Leaderboard</div>
                 </a>
             </div>
             <div class="home-people">
-                <a href="#/app/profile"><i class="icon icon-people">&nbsp;</i>
+                <a nav-clear menu-close href="#/app/profile"><i class="icon icon-people">&nbsp;</i>
                    <div class="my-profile">My profile</div></a>
             </div>
         </div>
         <hr class="home-divid">
         <div class="home-socials">
             <div class="home-fb">
-                <a href="#/app/fbpost"> <i class="icon icon-fb"></i>
+                <a nav-clear menu-close href="#/app/fbpost"> <i class="icon icon-fb"></i>
                     <div class="home-fb1">Facebook</div>
                 </a>
 
             </div>
             <div class="home-twit">
-                <a href="#/app/twitterpost"> <i class="icon icon-twit"></i>
+                <a nav-clear menu-close href="#/app/twitterpost"> <i class="icon icon-twit"></i>
                     <div class="home-twit1">Twitter</div>
                 </a>
 
             </div>
             <div class="home-post">
-                <a href="#/app/suggestedpost"><i class="icon-post"></i>
+                <a nav-clear menu-close href="#/app/suggestedpost"><i class="icon-post"></i>
                 <div class="home-post1"> Create Post</div>
                 </a>
             </div>
