--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -7,7 +7,7 @@
             </button>
         </ion-nav-buttons>
         <div class="head-lead">
-            Createpost
+            Create Post
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
