--- a/templates/suggestedpost.html
+++ b/templates/suggestedpost.html
@@ -12,6 +12,7 @@
         </div>
     </ion-nav-bar>
     <ion-content>
+<!--
         <div class="suggested">
             <div class="row">
                 <div class="col">
@@ -79,5 +80,11 @@
                 <a href="#/app/createpost">View all</a>
             </div>
         </div>
+-->
+        <div class="padding-top"></div>
+        <div class="padding-top"></div>
+        <div class="padding-top"></div>
+        <div class="padding-top"></div>
+        <div class="text-center coming-soon"><h2>Coming Soon..</h2></div>
     </ion-content>
 </ion-view>
