--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -16,6 +16,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
+        <!--
         <div class="suggest">
             <label class="item item-input fb-twt">
                 <input type="text" placeholder="Platform">
@@ -39,6 +40,14 @@
                     Save
                 </button>
             </div>
+        </div>
+-->
+        <div class="padding-top"></div>
+        <div class="padding-top"></div>
+        <div class="padding-top"></div>
+        <div class="padding-top"></div>
+        <div class="text-center coming-soon">
+            <h2>Coming Soon..</h2>
         </div>
     </ion-content>
 </ion-view>
