--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -11,10 +11,8 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <div class="open-textss" ng-click="opentexts();">
-                <button class="button button-icon button-clear ion-search post-icon blue brf absolutedone">
-                </button>
-                <input type="text" class="text-top" ng-class="textopens">
+            <div class="open-textss">
+                <button class="button button-icon button-clear ion-search post-icon blue brf absolutedone"></button>
             </div>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -24,7 +22,7 @@
                 <div class="lead2 ">
                     <img src="{{rankuser[1].image}} " alt=" ">
                     <div class="lead12 ">
-                        <p> #{{rankuser[1].rank}}</p>
+                        <p>#{{rankuser[1].rank}}</p>
                         <h5> {{rankuser[1].name}} </h5>
                         <h4>  {{rankuser[1].score}}</h4>
                     </div>
@@ -34,7 +32,7 @@
                 <div class="lead1 ">
                     <img src="{{rankuser[0].image}} " alt=" ">
                     <div class="lead11 ">
-                        <p> #{{rankuser[0].rank}}</p>
+                        <p>#{{rankuser[0].rank}}</p>
                         <h5> {{rankuser[0].name}} </h5>
                         <h4>  {{rankuser[0].score}}</h4>
                     </div>
@@ -44,7 +42,7 @@
                 <div class="lead3 ">
                     <img src="{{rankuser[2].image}} " alt=" ">
                     <div class="lead13 ">
-                        <p> #{{rankuser[2].rank}}</p>
+                        <p>#{{rankuser[2].rank}}</p>
                         <h5> {{rankuser[2].name}} </h5>
                         <h4>  {{rankuser[2].score}}</h4>
                     </div>
