--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -85,17 +85,17 @@
     <ion-footer-bar>
         <div class="bar bar-footer ">
             <div class="row like-comnt leader " id="like-comnts ">
-                <div class="col col-33 bod-right ">
+                <div class="col col-25 bod-right ">
                     <h5>
                  #{{user.rank}}
                 </h5>
                 </div>
-                <div class="col col-33 bod-right ">
+                <div class="col col bod-right ">
                     <h5>
 						{{user.name}}
                 </h5>
                 </div>
-                <div class="col col-33 bod-right ">
+                <div class="col col-25 bod-right ">
                     <h5 class="score-tot ">
                         <i class="icon-star icon-str "></i>
                 {{user.score}}
