--- a/templates/table.html
+++ b/templates/table.html
@@ -68,7 +68,7 @@
             <div class="col {{newpostclass}}">
 
                 <a class="button button-small button-positive history {{newpostclass}}" ng-click="changetab('newpost')">
-                        New Post
+                        New Tweet
                 </a>
             </div>
             <div class="col {{historyclass}}">
