--- a/templates/twitterpost.html
+++ b/templates/twitterpost.html
@@ -63,12 +63,12 @@
         </div>
         <div class="row center-main">
             <div class="col">
-                <a class="button button-small button-positive history activated">
-                    New Post
+                <a class="button button-small button-positive history {{newpostclass}}">
+                    New Tweet
                 </a>
             </div>
             <div class="col">
-                <a class="button button-small button-positive history" href="#/app/table">
+                <a class="button button-small button-positive history {{historyclass}}" href="#/app/table">
                         History
                     </a>
             </div>
