--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -22,7 +22,7 @@
                 <div class="lead2 ">
                     <img src="{{rankuser[1].image}} " alt=" ">
                     <div class="lead12 ">
-                        <p>#{{rankuser[1].rank}}</p>
+                        <p>{{rankuser[1].rank}}</p>
                         <h5> {{rankuser[1].name}} </h5>
                         <h4>  {{rankuser[1].score}}</h4>
                     </div>
@@ -32,7 +32,7 @@
                 <div class="lead1 ">
                     <img src="{{rankuser[0].image}} " alt=" ">
                     <div class="lead11 ">
-                        <p>#{{rankuser[0].rank}}</p>
+                        <p>{{rankuser[0].rank}}</p>
                         <h5> {{rankuser[0].name}} </h5>
                         <h4>  {{rankuser[0].score}}</h4>
                     </div>
@@ -42,7 +42,7 @@
                 <div class="lead3 ">
                     <img src="{{rankuser[2].image}} " alt=" ">
                     <div class="lead13 ">
-                        <p>#{{rankuser[2].rank}}</p>
+                        <p>{{rankuser[2].rank}}</p>
                         <h5> {{rankuser[2].name}} </h5>
                         <h4>  {{rankuser[2].score}}</h4>
                     </div>
@@ -57,7 +57,7 @@
                 <div class="row " ng-repeat="leader in leaderboard ">
                     <div class="col col-10 ">
                         <div class="rank-lead ">
-                            #{{leader.rank}}
+                            {{leader.rank}}
                         </div>
                     </div>
                     <div class="col col-20 ">
@@ -87,7 +87,7 @@
             <div class="row like-comnt leader " id="like-comnts ">
                 <div class="col col-25 bod-right ">
                     <h5>
-                 #{{user.rank}}
+                 {{user.rank}}
                 </h5>
                 </div>
                 <div class="col col bod-right ">
