--- a/templates/suggestedpost.html
+++ b/templates/suggestedpost.html
@@ -12,11 +12,10 @@
         </div>
     </ion-nav-bar>
     <ion-content>
-<!--
         <div class="suggested">
             <div class="row">
                 <div class="col">
-                    <a href="#/app/createpost">
+                    <a href="#/app/createpost/3">
                         <div>
                             <div class="circle clrblue">
                                 3
@@ -29,7 +28,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="#/app/createpost">
+                    <a href="#/app/createpost/1">
                         <div>
                             <div class="circle clrgreen">
                                 1
@@ -41,7 +40,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a href="#/app/createpost">
+                    <a href="#/app/createpost/0">
                         <div>
                             <div class="circle clrgred">
                                 7
@@ -53,7 +52,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a href="#/app/createpost">
+                    <a href="#/app/createpost/2">
                         <div>
                             <div class="circle clrgviolet">
                                 5
@@ -80,11 +79,10 @@
                 <a href="#/app/createpost">View all</a>
             </div>
         </div>
--->
         <div class="padding-top"></div>
         <div class="padding-top"></div>
         <div class="padding-top"></div>
         <div class="padding-top"></div>
-        <div class="text-center coming-soon"><h2>Coming Soon..</h2></div>
+<!--        <div class="text-center coming-soon"><h2>Coming Soon..</h2></div>-->
     </ion-content>
 </ion-view>
