--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -16,21 +16,26 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
-        <!--
+        
         <div class="suggest">
             <label class="item item-input fb-twt">
-                <input type="text" placeholder="Platform">
-                <i class="ion-social-facebook"></i>
-                <i class="ion-social-twitter"></i>
+                <input type="text" placeholder="Platform" disabled style="background-color: rgba(255, 255, 255, 0);" ng-model="post.platform">
+				<div ng-click="suggestfacebook()"><a><i class="ion-social-facebook"></i></a></div>
+				<div ng-click="suggesttwitter()"><a><i class="ion-social-twitter"></i></a></div>
             </label>
             <label class="item item-input img">
-                <input type="text" placeholder="Text">
+                <input type="text" placeholder="Text" ng-model="post.text">
             </label>
             <label class="item item-input img">
-                <input type="text" placeholder="Links">
+                <input type="text" placeholder="Links" ng-model="post.link">
             </label>
             <label class="item item-input image-sugest">
                 Image
+                
+<!--
+                <button class="button button-icon icon ion-image" ng-click="takePicture();"></button>
+                <img ng-src="{{cameraimage}}" alt="" style="height:50px;width:50px; margin:5px;">
+-->
                 <button class="button button-small imgset">
                     Choose File
                 </button>
@@ -41,13 +46,15 @@
                 </button>
             </div>
         </div>
--->
+
         <div class="padding-top"></div>
         <div class="padding-top"></div>
         <div class="padding-top"></div>
         <div class="padding-top"></div>
+<!--
         <div class="text-center coming-soon">
             <h2>Coming Soon..</h2>
         </div>
+-->
     </ion-content>
 </ion-view>
