--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -202,6 +202,7 @@
                         </div>
                     </ion-item>
                 </ion-list>
+                <ion-infinite-scroll icon="ion-loading-c" on-infinite="loadMore()"></ion-infinite-scroll>
             </div>
         </div>
     </ion-content>
