--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -38,12 +38,12 @@
             </div>
 
             <label class="item item-input img">
-                <input type="text" placeholder="Text" ng-model="post.text">
+                <input type="text" placeholder="Text" ng-model="post.text" ng-change="twittertext();">
             </label>
-            <label class="item item-input img">
+            <label class="item item-input img" ng-show="showfb">
                 <input type="text" placeholder="Links" ng-model="post.link">
             </label>
-            <label class="item item-input image-sugest">
+            <label class="item item-input image-sugest" ng-show="showfb">
                 Image
 
                 <!--
