--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -29,6 +29,43 @@
                             <div class="col">Actions</div>
                         </div>
                     </ion-item>
+                    <ion-item class="mk-class" ng-repeat="post in posts">
+                        <div class="row">
+                            <div class="col">
+                                <div class="text-create">
+                                    <p>{{post.text}}</p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="image-create">
+                                    <img src="{{post.image | imagepath}}" alt="">
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="crete-icon" ng-if="post.suggestionstatus==''">
+                                    <i class="icons ion-ticks"></i>
+                                </div>
+                                <div class="crete-icon" ng-if="post.suggestionstatus=='Pending'">
+                                    <i class=" icons ion-closes"></i>
+                                </div>
+                                <div class="crete-icon" ng-if="post.suggestionstatus=='Rejected' || post.suggestionstatus=='Publish'">
+                                    <i class="icons ion-exclamation"></i>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="crete-btn">
+                                    <button class="button button-small" ng-if="post.suggestionstatus=='Publish' && post.posttype=='1'">
+                                        Post
+                                    </button>
+                                    <div class="crete-btn1" ng-if="post.suggestionstatus=='Publish' && post.posttype=='2'">
+										<button class="button icon-left ion-social-twitter button-post">Tweet</button>
+									</div>
+                                    <p ng-if="post.suggestionstatus=='Rejected' || post.suggestionstatus=='Pending'">{{post.suggestionstatus}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </ion-item>
+<!--
                     <ion-item class="mk-class">
                         <div class="row">
                             <div class="col">
@@ -201,6 +238,7 @@
                             </div>
                         </div>
                     </ion-item>
+-->
                 </ion-list>
                 <ion-infinite-scroll icon="ion-loading-c" on-infinite="loadMore()"></ion-infinite-scroll>
             </div>
