--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -21,24 +21,25 @@
         <div class="post-infocont">
             <h5>Platform</h5>
             <i class="ion-social-twitter"></i>
-            <h5>date</h5> 02-02-15 | 13.55.05
+            <h5>date</h5> {{post.timestamp|date:fullDate}}
         </div>
         <div class="box-slider">
             <div class="box">
                 <div class="post-cont">
                     <div class="card">
                         <div class="item item-text-wrap">
-                            <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
-    Link:<a href="">http://bit.ly/myDellrewards</a></h4>
+                            <h4>{{post.posttext}}</h4>
                         </div>
                     </div>
-                    <button class="button icon-left ion-social-twitter button-post">Tweet</button>
+<!--                    <button class="button icon-left ion-social-twitter button-post">Tweet</button>-->
                 </div>
             </div>
+<!--
             <div class="previous">
                 <img src="img/arrowleft.png" class="next">
                 <img src="img/arrowright.png" class="prevoius">
             </div>
+-->
         </div>
     </ion-content>
     <ion-footer-bar>
@@ -46,12 +47,12 @@
             <div class="row like-comnt">
                 <div class=" col tab-items1">
                     <a>
-                        <i class="iicon hrt-icon"></i> 1
+                        <i class="iicon hrt-icon"></i> {{post.favourites}}
                     </a>
                 </div>
                 <div class="col tab-items2">
                     <a>
-                        <i class="iicon retweet"></i> 1
+                        <i class="iicon retweet"></i> {{post.retweet}}
                     </a>
                 </div>
             </div>
