--- a/templates/suggestedpost.html
+++ b/templates/suggestedpost.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="#/app/createpost/1">
+                    <a href="#/app/createpost/Publish">
                         <div>
                             <div class="circle clrgreen">
                                 1
@@ -40,7 +40,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a href="#/app/createpost/0">
+                    <a href="#/app/createpost/Pending">
                         <div>
                             <div class="circle clrgred">
                                 7
@@ -52,7 +52,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a href="#/app/createpost/2">
+                    <a href="#/app/createpost/Rejected">
                         <div>
                             <div class="circle clrgviolet">
                                 5
